Add ability to save added gives to dB

--- a/GigHub/GigHub/GigHub.csproj
+++ b/GigHub/GigHub/GigHub.csproj
@@ -196,6 +196,10 @@
     <Compile Include="Migrations\201902200031594_PopulateGenresTable.Designer.cs">
       <DependentUpon>201902200031594_PopulateGenresTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201902202243363_AddForeignKeyPropertiesToGig.cs" />
+    <Compile Include="Migrations\201902202243363_AddForeignKeyPropertiesToGig.Designer.cs">
+      <DependentUpon>201902202243363_AddForeignKeyPropertiesToGig.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -293,6 +297,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201902200031594_PopulateGenresTable.resx">
       <DependentUpon>201902200031594_PopulateGenresTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902202243363_AddForeignKeyPropertiesToGig.resx">
+      <DependentUpon>201902202243363_AddForeignKeyPropertiesToGig.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
